--- a/src/style.scss
+++ b/src/style.scss
@@ -43,12 +43,15 @@ body{
         position: absolute;
         top: 0;
         left: 0;
-        z-index: -10;
+        pointer-events: auto;
 
         &-left,
         &-right{
             width: 50%;
             height: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
 
         &-left{
@@ -58,12 +61,20 @@ body{
         &-right{
             background-color: $secondary-color;
         }
+
+        &-image{
+            width: 50vh;
+            height: 50vh;
+            object-fit: cover;
+            border-radius: 50%;
+        }
     }
 
     &-footer{
         width: 100vw;
         display: flex;
         justify-content: center;
+        z-index: 10;
         
         &-link{
             margin: 10px 0;
